United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6688137 c++ interpreter fails on 64bit sparc
6688137 : c++ interpreter fails on 64bit sparc

Details
Type:
Bug
Submit Date:
2008-04-14
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
solaris
Sub-Component:
runtime
CPU:
sparc
Priority:
P4
Resolution:
Fixed
Affected Versions:
7
Fixed Versions:
hs13

Related Reports
Backport:
Backport:

Sub Tasks

Description
Synopsis say it all. This was reported by a member of OpenJDK who also supplied fixes.

                                    

Comments
EVALUATION

Endian issues. Patch supplied by Volker.
                                     
2008-04-14



Hardware and Software, Engineered to Work Together