6688137: c++ interpreter fails on 64bit sparc

Misc. 64bit and endian fixes for sparc

Reviewed-by: never, kvn, rasbold